Add em-warden-client to travis.
Signed-off-by: Eric Malm <emalm@pivotallabs.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ rvm:
 env:
   - "BUNDLE_GEMFILE=$TRAVIS_BUILD_DIR/warden-client/Gemfile"
   - "BUNDLE_GEMFILE=$TRAVIS_BUILD_DIR/warden-protocol/Gemfile"
+  - "BUNDLE_GEMFILE=$TRAVIS_BUILD_DIR/em-warden-client/Gemfile"
 
 before_install: bundle install
 
 script:
   - if [[ "$BUNDLE_GEMFILE" == *warden-client* ]]; then cd $TRAVIS_BUILD_DIR/warden-client && bundle exec rspec spec; fi
   - if [[ "$BUNDLE_GEMFILE" == *warden-protocol* ]]; then cd $TRAVIS_BUILD_DIR/warden-protocol && bundle exec rspec spec; fi
+  - if [[ "$BUNDLE_GEMFILE" == *em-warden-client* ]]; then cd $TRAVIS_BUILD_DIR/em-warden-client && bundle exec rspec spec; fi
