--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: ruby
 rvm:
   - 1.8.7
   - 1.9.3
+  - 1.9.3-p484
   - 2.0.0
 
 env:
@@ -13,6 +14,6 @@ env:
 before_install: bundle install
 
 script:
-  - if [[ "$BUNDLE_GEMFILE" == *warden-client* ]]; then cd $TRAVIS_BUILD_DIR/warden-client && bundle exec rspec spec; fi
-  - if [[ "$BUNDLE_GEMFILE" == *warden-protocol* ]]; then cd $TRAVIS_BUILD_DIR/warden-protocol && bundle exec rspec spec; fi
-  - if [[ "$BUNDLE_GEMFILE" == *em-warden-client* ]]; then cd $TRAVIS_BUILD_DIR/em-warden-client && bundle exec rspec spec; fi
+  - if [[ "$BUNDLE_GEMFILE" == *"/warden-client"* ]]; then cd $TRAVIS_BUILD_DIR/warden-client && bundle exec rspec spec; fi
+  - if [[ "$BUNDLE_GEMFILE" == *"/warden-protocol"* ]]; then cd $TRAVIS_BUILD_DIR/warden-protocol && bundle exec rspec spec; fi
+  - if [[ "$BUNDLE_GEMFILE" == *"/em-warden-client"* ]]; then cd $TRAVIS_BUILD_DIR/em-warden-client && bundle exec rspec spec; fi
