--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ env:
   - "BUNDLE_GEMFILE=$TRAVIS_BUILD_DIR/warden-protocol/Gemfile"
   - "BUNDLE_GEMFILE=$TRAVIS_BUILD_DIR/em-warden-client/Gemfile"
 
+# exclude EM specs on 1.8.7 because of fiber dependency
+matrix:
+  exclude:
+    - rvm: 1.8.7
+      env: "BUNDLE_GEMFILE=$TRAVIS_BUILD_DIR/em-warden-client/Gemfile"
+
 before_install: bundle install
 
 script:
