Lock rspec at ~> 2.11
RSpec 3 is out and we're picking it up in our CI builds.  Locking an older
version to avoid the deprecation warnings and other issues associated with
using the new rspec.

We've explicitly chosen 2.11 as 2.14 also issues deprecation warnings that we
don't intend to address at this time.

Signed-off-by: Matthew Sykes <matthew.sykes@gmail.com>

--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -12,5 +12,5 @@ gem "warden-protocol", :git => "https://github.com/cloudfoundry/warden.git"
 gem "warden-client", :git => "https://github.com/cloudfoundry/warden.git"
 
 group :spec do
-  gem "rspec"
+  gem "rspec", "~> 2.11.0"
 end
