Upgrade warden to use ruby 2.1.4
[#89148118]

--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -3,7 +3,7 @@ source "http://rubygems.org"
 gem "rake"
 gem "steno", "~> 0.0.15", :git => 'https://github.com/cloudfoundry/steno.git'
 gem "membrane", :git => 'https://github.com/cloudfoundry/membrane.git'
-gem "eventmachine", "~> 1.0.0"
+gem "eventmachine", "1.0.3"
 gem "em-posix-spawn", :git => 'https://github.com/cloudfoundry/common.git'
 gem "yajl-ruby"
 gem "pidfile"
