Adjust LOADPATH to start warden

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -56,6 +56,9 @@ end
 namespace :warden do
   desc "Run Warden server"
   task :start, :config_path do |t, args|
+    lib = File.expand_path("../lib", __FILE__)
+    $LOAD_PATH.unshift(lib) unless $LOAD_PATH.include?(lib)
+
     require "warden/server"
 
     if args[:config_path]
