Add eventually and eventully_errors_with matchers to fix flakey tests.
[#113086969]

Signed-off-by: Sandy Cash <scarlet.tanager@gmail.com>

--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -13,4 +13,5 @@ gem "warden-client", :path => "../warden-client"
 
 group :spec do
   gem "rspec", "~> 3.0"
+  gem "rspec-eventually", "~> 0.1.0"
 end
